# financial-accounts

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  account-list.csv  cli.py  pyproject.toml  release.py
.claude/: settings.local.json
.github/workflows/: publish_on_tag.yml  test.yml
accounts/: data_access.py  models.py
accounts/business/: account_service.py  base_service.py  book_service.py  management_service.py  transaction_service.py
accounts/db/: data_access.py  models.py  updated_mixin.py
application/sql/: schema.sql
db/: accounting-system.db
etc/: category-payee-lookup.json  matching-rules.json
financial_accounts/: __init__.py  cli.py
financial_accounts/business/: account_service.py  base_service.py  management_service.py  matching_service.py  transaction_service.py
financial_accounts/db/: data_access.py  models.py
financial_accounts/util/: qif.py
ledger/: cli.py  config.py  logging_config.py
ledger/business/: account_service.py  archive_service.py  base_service.py  book_context.py  book_service.py  categorize_service.py  ingest_service.py  management_service.py  matching_service.py  reconciliation_service.py  statement_service.py  transaction_service.py
ledger/db/: data_access.py  models.py
ledger/util/: chase_csv.py  normalize.py  pdf_parser.py  qif.py  statement_uri.py  transfer.py
scripts/: verify_statements.py
tests/: conftest.py  test_base_service.py  test_book_service.py  test_data_access.py  test_management_service.py  test_transaction_service.py
tests/accounts/business/: test_account_service.py  test_base_service.py  test_book_service.py  test_management_service.py  test_matching_service.py  test_transaction_service.py
tests/accounts/db/: test_data_access.py
tests/financial_accounts/business/: test_account_service.py  test_book_service.py  test_management_service.py  test_matching_service.py  test_matching_service_integration.py  test_transaction_service.py
tests/financial_accounts/db/: test_data_access.py
tests/ledger/business/: test_account_service.py  test_archive_service.py  test_base_service.py  test_book_service.py  test_categorize_service.py  test_ingest_service.py  test_management_service.py  test_matching_service.py  test_matching_service_integration.py  test_reconciliation_service.py  test_transaction_service.py
tests/ledger/db/: test_data_access.py
tests/ledger/util/: __init__.py  test_chase_csv.py  test_normalize.py  test_pdf_parser.py  test_statement_uri.py
tests/validation/: __init__.py  conftest.py  test_comprehensive_matching.py  test_real_world_matching.py  test_sample_data.py
validation/: VALIDATION_TESTS.md  comprehensive_matching_validation.py  debug_matching_logic.py  matching-config.json  matching-patterns.md  real_world_matching_test.py  validate_sample_data.py
validation/data-samples/: sample-1381.qif  sample-1605.qif  sample-6063.qif  samples-1381.qif  samples-1605.qif  samples-6063.qif
